--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,36 @@
-header a, a:hover{
+.navbar {
+    border-radius: 0;
+  }
+.header a, a:hover{
   color: #f0ad4e;
   text-decoration: none;
 }
-header h1{
+.header h1{
   letter-spacing: 15px;
   font-size: 300%;
 }
-header p{
+.header p{
   color: white !important;
   font-size: 90%;
   letter-spacing: 3px;
+}
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+    background-color: #346270;
+}
+.nav-pills>li>a{
+  color: #fff;
+}
+.nav-pills>li>a:hover{
+  background-color: #346270;
+}
+.navbar-inverse{
+  padding: 1%;
+}
+@media (max-width: 767px) {
+	.nav-pills>li {
+		float: none;
+	}
+	.nav-pills {
+		text-align: center;
+	}
 }
